# tunnel

./: Cargo.toml  README.md  config.json  config.jsonc
src/: lib.rs  tcp.rs
src/app/: dispatcher.rs  dns_client.rs  inbound.rs  listener.rs  mod.rs  outbound.rs  router.rs  sniffer.rs  udp_association_manager.rs
src/common/: linux.rs  mod.rs
src/config/: mod.rs
src/net/: mod.rs  stream.rs
src/net/sys/: linux.rs  mod.rs
src/proxy/: mod.rs
src/proxy/direct/: mod.rs
src/proxy/shadowsocks/: cipher.rs  mod.rs
src/proxy/socks/: inbound.rs  mod.rs  outbound.rs  udp.rs
src/proxy/tun/: mod.rs  tcp.rs
src/tun/: mod.rs  tcp.rs
test/: server.rs
tests/: server.rs  socks5.rs  udp.rs
