[package]
name = "tunnel"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tunnel"
path = "bin/tunnel.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"]}
tun = { version = "0.5.3", features = ["async"]}
ipnet = { version = "2.3.1" }
etherparse = "0.9.0"
log4rs = "1.0.0"
log = "0.4.14"