[package]
name = "tunnel"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tunnel"
path = "bin/tunnel.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"]}
tun = { version = "0.5.3", features = ["async"]}
ipnet = { version = "2.3.1" }
etherparse = "0.9.0"
log4rs = "1.0.0"
log = "0.4.14"
lru_time_cache = "0.11.11"
rand = "0.8.4"
libc = "0.2.102"
pin-project = "1.0.8"
trust-dns-proto = "0.20.3"
socket2 = "0.4.2"
futures-util = "0.3.17"