[package]
name = "tunnel"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tunnel"
path = "bin/tunnel.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
ipnet = { version = "2.3.1" }
etherparse = "0.9.0"
log4rs = "1.0.0"
log = "0.4.14"
lru_time_cache = "0.11.11"
rand = { version = "0.8.4"}
pin-project = "1.0.8"
trust-dns-proto = "0.20.3"
socket2 = "0.4.2"
futures-util = "0.3.17"
anyhow = "1.0.44"
async-trait = "0.1.51"
serde_json = { version = "1.0.68", features = ["raw_value"] }
serde_derive = "1.0.130"
serde = { version = "1.0" }
clap="2.33.3"
byteorder = "1.4.3"
thiserror = "1.0.31"
futures = "0.3"
json_comments = "0.2.1"
regex = "1"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2.102"
tun = { version = "0.5.3", features = ["async"] }